--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
     "svelteSortOrder" : "options-styles-scripts-markup",
-    "svelteStrictMode": true,
     "svelteBracketNewLine": false,
-    "svelteAllowShorthand": false,
+    "svelteAllowShorthand": true,
     "svelteIndentScriptAndStyle": false
 }
