--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "gh-pages": "^3.2.3",
     "sirv-cli": "^1.0.0",
     "svelte-spa-router": "^3.2.0",
     "sveltestrap": "^5.6.3"
